tests/parse_error/signal_data_without_on_signal.ll
on signal onRange20(S4):
    pass
print signal_data // <-- outside "on signal"
